  be back in 1.7.x.
- added configuration option svn-command in the global section, allowing
  to replace the default svn command
- force svn+ssh:// URLs to be in BatchMode, in order to not have any
  interactivity at all with ssh
- fixed bad url used when using -v in getsrpm
- make 'repsys submit' without package name or revision number work again
- the fix for the unreleased commits problem in the previous release was
  wrong, really fixed it
- don't give the wrong message "invalid command 'CMD'" when this is not
  the case

* 1.6.19
- added complement for SILENT: CLOG, which hides everything that does not
  start with this token
- fixed generation of unreleased commits, it was using the previous
  markrelease revision as reference
- added option -o to 'co' to disable the use of mirror when checking out

* 1.6.18
- added the subcommand "switch" to help with mirrors support
- initialize plugins in create-srpm too
- changelog: perform less svn calls to obtain release number and oldlog
- changelog: show epoch even in the entry not released
- changelog: make default.chlog compatible with cheetah-2
- make "sync" compatible with rpm-4.4.8 behavior
- "co" don't use mirror when URL is provided
- "ci" don't relocate back to mirrors after commit (should use switch)
- ldapusers: added options ldap-uri and ldap-starttls
- fixed use of __import__, incompatible with python2.4 in plugin support
- fixed bug of wrong paths when using mirrors

* 1.6.17
- brought from mdvsys world the sync command
- ldapusers: the configuration format has changed, now it uses python
  template strings
- ldapusers: many fixes: better error messages, ldap-port working, results
  contain only the fields needed, unbinding after search, filters are
  escaped

* 1.6.16
- introduced the plugin ldapusers: repsys user data obtained from LDAP;
  this plugin is builtin
- added support to plugins, and the hability to wrap configuration sections
- added workaround in the template to ignore empty releases