@@ -11,6 +11,8 @@ in case the option "mirror" is set in repsys.conf.
 
 Options:
     -h      Show this message
+    -m MSG  Use the MSG as the log message
+    -F FILE Read log message from FILE
 
 Examples:
     repsys ci
@@ -20,6 +22,8 @@ Examples:
 def parse_options():
     parser = OptionParser(help=HELP)
     parser.add_option("-m", dest="message", default=None)
+    parser.add_option("-F", dest="logfile", type="string",
+            default=None)
     opts, args = parser.parse_args()
     if len(args):
         opts.target = args[0]
